# docker-image-size-limit

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  action.yml  docker_image_size_limit.py  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: disl.yml  test.yml
docker_image_size_limit/: __init__.py  __main__.py  version.py
scripts/: entrypoint.sh
tests/: conftest.py  test_check_max_layers.py  test_check_size.py  test_cli.py  test_docker_image_size_limit.py  test_main.py  test_version.py
