[tool.poetry]
name = "docker-image-size-limit"
version = "1.1.0"
description = ""
license = "MIT"
authors = [
  "Nikita Sobolev <mail@sobolevn.me>"
]

readme = "README.md"

repository = "https://github.com/wemake-services/docker-image-size-limit"

keywords = [
  "docker",
  "docker image",
  "size limit",
  "wemake.services",
  "code quality"
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
]

[tool.poetry.urls]
"Funding" = "https://github.com/sponsors/wemake-services"

[tool.poetry.scripts]
disl = "docker_image_size_limit:main"

[tool.poetry.dependencies]
python = "^3.9"

docker = ">=3.7"
humanfriendly = ">=4.18,<11.0"

[tool.poetry.group.test.dependencies]
pytest-cov = "^4.0"
pytest-randomly = "^3.12"
pytest-timeout = "^1.4"
pytest = "^8.0"

mypy = "^1.8"
wemake-python-styleguide = "^0.18"
flake8-pytest-style = "^1.6"
nitpick = "^0.33"


[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"
